samples/_failures_safe/1761668576_2e986b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b2cdd0f7.c: In function ‘dijkstra_shortest_path’:
./samples/SAFE/__tmp_b2cdd0f7.c:158:16: error: missing terminating " character
  158 |         printf("No path
      |                ^~~~~~~~
./samples/SAFE/__tmp_b2cdd0f7.c:158:9: error: expected expression at end of input
  158 |         printf("No path
      |         ^~~~~~
./samples/SAFE/__tmp_b2cdd0f7.c:158:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b2cdd0f7.c:158:9: error: expected declaration or statement at end of input
